[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/MovePoint/MovePoint.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]
radius = 0.5

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.5
bottom_radius = 0.5
height = 0.05

[node name="MovePoint" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Area"]
mesh = SubResource( 2 )
material/0 = null

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -5 )
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
